<resources>
    <string name="app_name">Housing</string>
    <string name="app_logo">app_logo</string>
    <string name="on_boarding_info">Plumber and expert\nnearby you</string>
    <string name="moto">Instant Experts, Zero Hassle</string>
    <string name="move_to_login">Move to login\n</string>
    <string name="onboarding_graphic_description">image_description_of_onboarding</string>
    <string name="greater_than"><![CDATA[>]]></string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="email_label">Email</string>
    <string name="back_button_desc">back going button</string>
    <string name="password_label">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_redirect">Already have an account? Log In</string>
    <string name="forgot_text_detail">Enter the email associated with your account and we’ll send an email with code to reset your password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_email">Text your email</string>
    <string name="email">Email</string>
    <string name="verify_otp_title">Verify OTP</string>
    <string name="otp_description_text">Enter your OTP which has been sent to your email and completely verify you account</string>
    <string name="resend_code_info">A code has been sent to you</string>
    <string name="resend_timer_value">Resend in 01:00</string>
    <string name="enter_the_6_digit_otp">Enter the 6-digit OTP</string>
    <string name="current_location_label">Current Location</string>
    <string name="current_address">Current Address</string>
    <string name="main_title_text">What you are looking for today</string>
    <string name="search_placeholder">Search what you need...</string>
    <string name="cleaning_services_title">Cleaning services</string>
    <string name="see_all_text">See all ></string>
    <string name="category_icon_description">Icon description</string>
    <string name="ac_repair">AC Repair</string>
    <string name="search_icon">Search Icon</string>
    <string name="home_cleaning">Home Cleaning</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="offer_info_description">Limited time offer for AC services.</string>
    <string name="offer_ac_service">AC Service</string>
    <string name="get_25_percent">Get 25% off</string>
    <string name="grab_offer_link">Grab this offer</string>
    <string name="house_cleaning">House Cleaning</string>
    <string name="price">$25/hr</string>
    <string name="service_image_description">description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_categories">All Categories</string>
    <string name="title_bookings">Bookings</string>
    <string name="filter">Filter</string>
    <string name="service_icon">Service Icon</string>
    <string name="status">Status</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="schedule">Schedule</string>
    <string name="provider_icon">Provider Icon if any</string>
    <string name="service_provider">Service provider</string>
    <string name="call">Call</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="draft">Draft</string>
    <string name="date">8:00-9:00 AM, 09 Dec 2025</string>
    <string name="rating_and_no_of_services">4.8 (87)</string>
    <string name="more_options">More options</string>
    <string name="list_view_toggle">List View Toggle</string>
    <string name="grid_view_toggle">Grid View Toggle</string>
    <string name="book_now">Book Now</string>
    <string name="save_draft">Save Draft</string>
    <string name="bill_details">Bill Details</string>
    <string name="total">Total:</string>
    <string name="add_details_about_your_service_request">Add details about your service request...</string>
    <string name="description">Description</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="type_of_property">Type of Property</string>
    <string name="number_of_units">Number of Units</string>
    <string name="number_of_bedrooms">Number of Bedrooms</string>
    <string name="property_icon">Property Icon</string>
    <string name="home">Home</string>
    <string name="close">Close</string>
    <string name="date_icon">Date Icon</string>
    <string name="select_your_date">Select your Date</string>
    <string name="time_icon">Time Icon</string>
    <string name="time">Time</string>
    <string name="select_your_time">Select your Time</string>
    <string name="_continue">Continue</string>
    <string name="hello">Hello</string>
    <string name="account">Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="navigation_arrow">Navigation Arrow</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="log_out">Log out</string>
    <string name="default_web_client_id">696871733474-4e7v5l0dq8tso29ad02s9hngevfh7q50.apps.googleusercontent.com</string>
    <string name="time_ascending">Time Ascending</string>
    <string name="time_descending">Time Descending</string>
    <string name="name_ascending">Name Ascending</string>
    <string name="name_descending">Name Descending</string>
    <string name="unknown_city">Unknown city</string>
    <string name="error_getting_address">Error getting address</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="Sort">Sort</string>
    <string name="starts_from">Starts From</string>
    <string name="office">Office</string>
    <string name="villa">Villa</string>
    <string name="back">Back</string>
    <string name="go_to_next_screen">Go to next screen</string>
    <string name="not_available">N/A</string>
    <string name="logout">Logout</string>
    <string name="personal_info_title">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="edit_profile_button">Edit</string>
    <string name="language_title">Language</string>
    <string name="select_app_language">Select Application Language</string>
    <string name="language_change_note">Note: Changing the language will reload the application to apply the changes.</string>
    <string name="language_changed_to">Language changed to</string>
    <string name="logout_confirmation_title">Logout Confirmation</string>
    <string name="logout_confirmation_message">Are you sure to logout?</string>
    <string name="action_logout">Logout</string>
    <string name="logged_out_successfully">Logout successfullly done</string>
    <string name="action_cancel">Cancel</string>
    <string name="new_password_title">Create New Password</string>
    <string name="set_a_new_password_description">Set a strong, unique password for your account</string>
    <string name="password_hint">Enter your new password</string>
    <string name="confirm_password_hint">Confirm your new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="error_repo_not_initialized">Repository not initialized</string>
    <string name="loading_notifications">Loading notifications...</string>
    <string name="no_notifications">No notifications found</string>
    <string name="error_loading_history">Failed to load notifications: </string>
    <string name="error_mark_read">Failed to mark notification as read: </string>
    <string name="role">Role</string>
    <string name="signup">Sign up</string>
    <string name="Id">Id</string>
    <string name="full_name_label">Full Name\n</string>
    <string name="full_name_hint">Full name hint</string>
    <string name="profile_picture_desc">Profile picture description</string>
    <string name="phone_number_label">Phone Number\n</string>
    <string name="phone_number_hint">Phone number hint</string>
    <string name="role_label">Role</string>
    <string name="role_hint">Role hint i.e customer or professional</string>
    <string name="select_role_prompt">Select Role</string>
    <string name="experience_years_label">Experience (years)</string>
    <string name="experience_years_hint">Experience years</string>
    <string name="skills_label">Skills</string>
    <string name="skills_hint">Skills Hints</string>
    <string name="description_label">Description</string>
    <string name="description_hint">Description hint</string>
    <string name="service_category_label">Service Category</string>
    <string name="service_category_hint">Service Category Hint</string>
    <string name="select_category_prompt">Service Category Prompt</string>
    <string name="service_name_label">Service</string>
    <string name="service_name_hint">Services</string>
    <string name="save_button">Save Button</string>
    <string name="service_name">Service Name</string>
    <string name="delete_service">Delete service</string>
    <string name="experience_years">Experience (years)</string>
    <string name="phone_number">Phone Number</string>
    <string name="image_url">Image URL</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="services">Services</string>


</resources>