<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Service Name -->
        <EditText
            android:id="@+id/et_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_name"
            android:inputType="text"
            android:layout_marginBottom="8dp"
            />

        <EditText
            android:id="@+id/et_service_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginBottom="8dp"
            />

        <EditText
            android:id="@+id/et_service_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/et_service_image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_url"
            android:inputType="textUri"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
</ScrollView>
